# learn-rust

./: Cargo.toml  README.md  test-journal.json
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs  tasks.rs
src/not_modules__code_examples/: associated_functions.rs  car_ms_training.rs  file_reading.rs  generic_struct_ms_training.rs  struct_example.rs
tests/: pizzas.rs
