[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
home = "0.5.11"
# chrono = "0.4.39"
# serde = "1.0.216"
serde_json = "1.0.134"
structopt = "0.3.26"

[dependencies.chrono]
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4.39"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0.216"
